5 번 서브 페이지 제작 및 반응형 제작
5 번 서브 페이지 제작 및 반응형 제작 중

--- a/request.html
+++ b/request.html
@@ -118,58 +118,188 @@
             <li><a href="#">프로젝트 의뢰</a></li>
         </ul>
     </nav>
+    <!--------------------------------section1-------------------------------------->
+    <section id="section1">
+        <div id="section1_AllBox">
+            <div id="section1_txtBox">
+                <h4>
+                    <b>컨트롤 에이</b>는 고객사와의 성공전략을 바탕으로</h4>
+                   <h4>업무의뢰 및 전략적 제휴에 관하여 항상 귀사의 제안을 기다리고 있습니다.
+                </h4>
+            </div><!--section1_txtBox-->
+            <div id="section1_BtnBox">
+                <p>Company Brochure</p>
+                <a href="">
+                    회사소개서 다운로드
+                    <img src="request/request_down.png">
+                </a>
+            </div><!--section1_BtnBox-->
+            <div id="section1_hide_BtnBox">
+                <p>Company Brochure</p>
+                <a href="">
+                    회사소개서 다운로드
+                    <img src="request/request_down.png">
+                </a>
+            </div><!--section1_hide_BtnBox-->
+        </div><!--section1_AllBox-->
+    </section>
+    <!--------------------------------section2-------------------------------------->
+    <section id="section2">
+        <div id="section2_AllBox">
+            <div id="section2_greyBox">
+                <div id="section2_txtBox">
+                    <h1>01.상담구분</h1>
+                    <p>아래 상담을 희망하시는 분야를 클릭해서<br>선택해 주시기 바랍니다.</p>
+                </div>
+                <div id="section2_pillBox">
+                    <div class="box">
+                        <span>웹사이트</span>
+                        <span>모바일웹</span>
+                        <span>모바일앱</span>
+                    </div>
+                    <div class="box">
+                        <span>컨설팅</span>
+                        <span>기업사이트</span>
+                        <span>서비스</span>
+                    </div>
+                    <div class="box">
+                        <span>커머스</span>
+                        <span>브랜드</span>
+                        <span>CI/BI/패키지</span>
+                    </div>
+                    <div class="lastBox">
+                        <span>통합운영</span>
+                        <span>유지관리</span>
+                    </div>
+                    <span id="realLastBox">시스템개선</span>
+                </div>
+            </div><!--section2_greyBox-->
+        </div><!--section2_AllBox-->
+        <div id="section2_inputBox">
+            <div id="section2_inputBox_txt">
+                <h1>02.정보입력</h1>
+                <p>
+                    <span class="star">*</span>은 필수 입력항목입니다.
+                </p>
+            </div><!--section2_inputBox_txt-->
+            <div id="section2_form">
+                <div id="section2_form_txt">
+                    <div>
+                        <p>회사명
+                            <span class="star">*</span>
+                        </p>
+                        <label for="">
+                            <input type="text">
+                        </label>
+                    </div><!--회사명-->
+                    <div>
+                        <p>담당자
+                            <span class="star">*</span>
+                        </p>
+                        <label for="">
+                            <input type="text">
+                        </label>
+                    </div>
+                    <div>
+                        <p>연락처
+                            <span class="star">*</span>
+                        </p>
+                        <label for="">
+                            <input type="text">
+                        </label>
+                    </div>
+                    <div>
+                        <p>이메일
+                            <span class="star">*</span>
+                        </p>
+                        <label for="">
+                            <input type="text">
+                        </label>
+                    </div>
+                    <div>
+                        <p>정부지원사업</p>
+                        <label for="">
+                            <input type="radio" class="radio">
+                            <span class="radio_txt">2019년 수출바우처 사업</span>
+                            <input type="radio" class="radio">
+                            <span class="radio_txt">선택안함</span>
+                        </label>
+                    </div>
+                    <div>
+                        <p>사업명
+                            <span class="star">*</span>
+                        </p>
+                        <label for="">
+                            <input type="text">
+                        </label>
+                    </div>
+                    <div>
+                        <p>상담내용
+                            <span class="star">*</span>
+                        </p>
+                        <label for="">
+                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                        </label>
+                    </div>
+                    <div>
+                        <p>사업예산
+                            <span class="star">*</span>
+                        </p>
+                        <label for="">
+                            <input type="text" style="width: 250px">
+                            <span id="money">만원</span>
+                        </label>
+                    </div>
+                    <div id="Input_fileBox">
+                        <p>첨부파일</p>
+                        <label for="">
+                            <input type="file">
+<!--                            <label for="" id="fileInput">첨부파일</label>-->
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </div><!--section2_inputBox-->
+    </section><!--section2-->
+    <!--------------------------------section3-------------------------------------->
+    <section id="section3">
+        <h1>03. 개인정보 동의</h1>
+        <div id="section3_allBox">
+            <div id="section3_txtBox">
+                <div>
+                    <p>1. 수집하는 개인정보의 항목</p>
+                    <p>- 필수항목 : 이름, 회사명, 휴대전화번호, 이메일</p>
+                    <p>- 선택항목 : 부서, 직위, 업종, 전화번호, 보유 도메인</p>
+                </div>
+                <div>
+                    <p>2. 개인정보의 수집 및 이용목적</p>
+                    <p>가. 재화 또는 서비스 제공 : 서비스 제공, 콘텐츠 제공, 맞춤 서비스 제공, 상담 및 컨설팅 운영 등</p>
+                    <p>나. 민원 사무 처리 : 서비스 제공에 관한 계약 이행 및 불만 처리 등 민원 처리, 고지 사항 전달, 분쟁 조정을 위한 기록</p>
+                </div>
+            </div>
+            <div id="section3_labelBox">
+                <label for="">
+                    <input type="checkbox" id="section3_checkBox">
+                </label>
+                <span>개인정보 제공에 동의합니다.</span>
+            </div>
+        </div>
+        <div id="section3_submitBox">
+            <label for="">
+                <a href="">신청</a>
+            </label>
+        </div>
+    </section>
+    <!--------------------------------footer-------------------------------------->
+    <footer id="footer">
+        <div>
+            <img src="img/footer_logo_on.png" alt="">
+            <p>주식회사 컨트롤에이 서울 강남구 논현로149길 12, 3층 (논현동, 에이치포)</p>
+            <p>Copyright &copy; 2019 CONTROLA CO., LTD. All Rights Reserved.</p>
+        </div>
+    </footer>
 </div>
-<!--------------------------------section1-------------------------------------->
-<section id="section1">
-    <div id="section1_AllBox">
-        <div id="section1_txtBox">
-            <h4>
-                <b>컨트롤 에이</b>는 고객사와의 성공전략을 바탕으로<br>
-                업무의뢰 및 전략적 제휴에 관하여 항상 귀사의 제안을 기다리고 있습니다.
-            </h4>
-        </div><!--section1_txtBox-->
-        <div id="section1_BtnBox">
-            <p>Company Brochure</p>
-            <a href="">
-                회사소개서 다운로드
-                <img src="request/request_down.png">
-            </a>
-        </div><!--section1_BtnBox-->
-    </div><!--section1_AllBox-->
-</section>
-<!--------------------------------section2-------------------------------------->
-<section id="section2">
-    <div id="section2_AllBox">
-        <div id="section2_greyBox">
-            <div id="section2_txtBox">
-                <h1>01.상담구분</h1>
-                <p>아래 상담을 희망하시는 분야를 클릭해서<br>선택해 주시기 바랍니다.</p>
-            </div>
-            <div id="section2_pillBox">
-                <div class="box">
-                    <span>웹사이트</span>
-                    <span>모바일웹</span>
-                    <span>모바일앱</span>
-                </div>
-                <div class="box">
-                    <span>컨설팅</span>
-                    <span>기업사이트</span>
-                    <span>서비스</span>
-                </div>
-                <div class="box">
-                    <span>커머스</span>
-                    <span>브랜드</span>
-                    <span>CI/BI/패키지</span>
-                </div>
-                <div class="lastBox">
-                    <span>통합운영</span>
-                    <span>유지관리</span>
-                </div>
-                <span id="realLastBox">시스템개선</span>
-            </div>
-        </div><!--section2_greyBox-->
-    </div><!--section2_AllBox-->
-</section>
+<!--------------------------------jQuery-------------------------------------->
 <script>
     $(function (){
         /********************topGnb 활성화 및 비활성화********************/
@@ -186,6 +316,7 @@
             subMenu2.hide();
         })
         navLi.eq(0).hover(function (){
+            // $(this).addClass("gnbActive")
             subMenu.show();
             subMenu2.hide();
         });subMenu.mouseleave(function (){
@@ -273,6 +404,12 @@
             subM2.hide();
             moreBtn2.show();
             lessBtn2.hide();
+        })
+        /********************active 활성화 및 비활성화********************/
+        let activeClass=$("#section2_greyBox span");
+
+        activeClass.on("click",function (){
+            $(this).toggleClass("active");
         })
     })
 </script>
